--- a/frontend/src/fountain-sample.fountain
+++ b/frontend/src/fountain-sample.fountain
@@ -34,6 +34,9 @@ To retirement.
 BRICK
 To retirement.
 
+~ Let's sing about retirement
+~ Today!
+
 They drink long and well from the beers.
 
 And then there's a long beat.  
