--- a/frontend/src/fountain-sample.fountain
+++ b/frontend/src/fountain-sample.fountain
@@ -18,6 +18,8 @@ The SCREEN DOOR slides open and DICK STEEL, his former partner and fellow retire
 /*test me what*/
 STEEL
 Beer's ready!
+&nbsp;
+test
 
 BRICK
 Are they cold?
